# simplest-chatbot-ever

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  chatbot.py  inspect_memory.py  main.py  pyproject.toml  requirements.txt  test_chatbot.py
.github/: copilot-instructions.md
src/: chat_agent.py  chatbot.py  intent_classifier.py  memory_store.py  rag_chat_agent.py
tests/: conftest.py  test_chatbot.py  test_intent_classifier.py  test_memory_store.py  test_rag_chat_agent.py  test_security.py
